rapora başlandı.proje,siparisemri düzenle kısımları yapıldı

--- a/MERP_V2/MERP_V2/MERP_V2.csproj
+++ b/MERP_V2/MERP_V2/MERP_V2.csproj
@@ -153,6 +153,7 @@
     <Compile Include="SiparisEmriGiris.Designer.cs">
       <DependentUpon>SiparisEmriGiris.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sorgular.cs" />
     <EmbeddedResource Include="AnaEkran.resx">
       <DependentUpon>AnaEkran.cs</DependentUpon>
     </EmbeddedResource>
