--- a/MERP_V2/MERP_V2/MERP_V2.csproj
+++ b/MERP_V2/MERP_V2/MERP_V2.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>merp_sHq_icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.dll</HintPath>
@@ -351,6 +354,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\appbar.chevron.left.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\appbar.printer.text.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="merp_sHq_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
